force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/CoIT_Service_Appointment_Status_History__c.object-meta.xml
<CustomObject>
    <label>Service Appointment Status History</label>
    <nameField>
        <displayFormat>SASH-{0000}</displayFormat>
        <label>Service Appointment Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Appointment Status History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>