force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Date__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>