force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Last_Date_Location__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Last_Date_Location__c</fullName>
    <label>Last Date Location</label>
    <type>DateTime</type>
</CustomField>