force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Last_Latitud_Location__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Last_Latitud_Location__c</fullName>
    <label>Last Latitud Location</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>