force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_New_Status__c.field-meta.xml
<CustomField>
    <fullName>CoIT_New_Status__c</fullName>
    <label>New Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>CoIT_Accepted</fullName>
                <isActive>false</isActive>
                <label>CoIT_Accepted</label>
            </value>
            <value>
                <fullName>CoIT_Failed</fullName>
                <isActive>false</isActive>
                <label>CoIT_Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>