force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Service_City__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Service_City__c</fullName>
    <formula>CoIT_Service_Appointment__r.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service City</label>
    <type>Text</type>
</CustomField>