force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Service_Latitude__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Service_Latitude__c</fullName>
    <formula>CoIT_Service_Appointment__r.Latitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Latitude</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>