force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Service_Longitude__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Service_Longitude__c</fullName>
    <formula>CoIT_Service_Appointment__r.Longitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Longitude</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>