force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Appointment Status History</relationshipLabel>
    <relationshipName>Service_Appointment_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>