force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Supplier__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Supplier__c</fullName>
    <formula>CoIT_Service_Resource__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>