force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/CoIT_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Service Appointment Status History</relationshipLabel>
    <relationshipName>Service_Appointment_Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>