force-app/main/default/objects/CoIT_Service_Appointment_Status_History__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <formula>IF( CreatedBy.Alias = &apos;segb&apos;,&apos;IU&apos;, Case(TEXT(CreatedBy.Contact.Service_Resource__r.ResourceType),&apos;T&apos;,&apos;Tecnico&apos;, &apos;D&apos;,&apos;Base&apos;, &apos;&apos;,&apos;Manual&apos;,TEXT(CreatedBy.Contact.Service_Resource__r.ResourceType)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Type</label>
    <type>Text</type>
</CustomField>